@@ -50,21 +50,24 @@
                        (list `(,var (match-string ,(incf n)))))))
             var-list)))
 
-(defun make-do-match-body (vars regex target-string result-form start end body)
-  `(do ((#1=#:regex (create-scanner ,regex))
-        (#2=#:target-string ,target-string)
-        (#3=#:start ,start)
-        (#4=#:end ,end))
-       ((not (string-match #1# #2# #3# #4#))
-        ,result-form)
-     (let* (,@vars)
-       (let ((#5=#:match-start (match-beginning 0))
-             (#6=#:match-end (match-end 0)))
-         (progn ,@body)
-         (setf #3# (if (= #5# #6#)
-                       (1+ #6#)
-                     #6#))
-         ))))
+(defun make-do-match-body (make-vars regex target-string result-form start end body)
+  (let ((gregex (gensym))
+        (gmatch-start (gensym))
+        (gmatch-end (gensym)))
+    `(let ((,gregex (create-scanner ,regex)))
+       (do ((#1=#:target-string ,target-string)
+            (#2=#:start ,start)
+            (#3=#:end ,end))
+           ((not (string-match ,gregex #1# #2# #3#))
+            ,result-form)
+         (let* ((,gmatch-start (match-beginning 0))
+                (,gmatch-end (match-end 0))
+                ,@(funcall make-vars gregex gmatch-start gmatch-end))
+           (progn ,@body)
+           (setf #2# (if (= ,gmatch-start ,gmatch-end)
+                         (1+ ,gmatch-end)
+                       ,gmatch-end))
+           )))))
 
 (defun count-register (regex)
   (ed::protect-match-data
